--- a/styles/main.css
+++ b/styles/main.css
@@ -64,9 +64,12 @@ header>button>.icon {
     box-shadow: rgba(0, 0, 0, 0.4) 0px 0px 4px, rgba(0, 0, 0, 0.3) 0px 0px 0px -3px, rgba(0, 0, 0, 0.2) 0px 8px 0px;
 }
 
-.score_item-o, .score_item-x, .score_item-ties {
-     font-size: .6rem;
-     font-weight: 600;   
+.score_item-o,
+.score_item-x,
+.score_item-ties {
+    font-size: .6rem;
+    font-weight: bold;
+    text-transform: uppercase;
 }
 
 .score_item-x {
@@ -81,9 +84,25 @@ header>button>.icon {
     background-color: var(--yellow);
 }
 
-.score{
-    font-size: 1.4rem;
+.score {
+    font-size: 1.2rem;
     margin: 0;
     padding: 0;
     line-height: 1.5rem;
+    font-weight: bold;
+}
+
+.board_item {
+    aspect-ratio: 1/1;
+}
+
+.icon.cross {
+    fill: var(--cyan);
+    height: 40%;
+    width: 40%;
+}
+.icon.circle {
+    fill: var(--yellow);
+    height: 50%;
+    width: 50%;
 }
